# Lottery_App_Solana

./: README.md
solana-lottery/: Anchor.toml
solana-lottery/.cargo/: config.toml
solana-lottery/programs/solana-lottery/: Cargo.toml
solana-lottery/programs/solana-lottery/src/: lib.rs
solana-lottery/test-ledger/: faucet-keypair.json  genesis.bin.failed  genesis.tar.bz2.failed
solana-lottery/test-ledger/rocksdb.failed/: IDENTITY  LOG
solana-lottery/tests/: solana-lottery.ts
